--- a/index.html
+++ b/index.html
@@ -247,6 +247,13 @@
                 </a>
             </li>
 
+            <li>
+                <a href="input_data.html" title="case study">
+                    <span class="nav-label">Inputs</span>
+                </a>
+            </li>
+
+
         </ul>
         <!-- END Tree  -->
 
