--- a/about.html
+++ b/about.html
@@ -196,6 +196,13 @@
                 </a>
             </li>
 
+            <li>
+                <a href="input_data.html" title="case study">
+                    <span class="nav-label">Inputs</span>
+                </a>
+            </li>
+
+
         </ul>
         <!-- END Tree  -->
 
