Fixed typos in map buttons

--- a/index.html
+++ b/index.html
@@ -330,9 +330,9 @@
                 <!-- START Heading with Mpaxbox button groups -->
                 <div class="panel-heading">
                     <div class="btn-group pull-right" role="group" aria-label="...">
-                        <button type="button" id= "sattelite" class="btn btn-sm btn-default">Sattelite</button>
+                        <button type="button" id= "sattelite" class="btn btn-sm btn-default">Satellite</button>
                         <button type="button" id= "dark" class="btn btn-sm btn-default">Dark</button>
-                        <button type="button" id= "terrain" class="btn btn-sm btn-default">terrain</button>
+                        <button type="button" id= "terrain" class="btn btn-sm btn-default">Terrain</button>
                         <button type="button" id= "moonlight" class="btn btn-sm btn-default">Moonlight</button>
                     </div>
                     <h3 class="panel-title">Click on the blue boundaries to select a case study</h3>
