Modified inputs page, dashboard and sidebar for chancellor meeting

--- a/input_data.html
+++ b/input_data.html
@@ -262,46 +262,41 @@
         <ul class="side-menu m-t-2">
 
             <li>
-                <a href="about.html" title="case study">
+                <a href="about.html" title="About">
                     <span class="nav-label">about</span>
                 </a>
             </li>
 
             <li>
-                <a href="login.html" title="case study">
-                    <span class="nav-label">login</span>
+                <a href="login.html" title="Log in to run the PoPS model">
+                    <span class="nav-label">login / create account</span>
                 </a>
             </li>
 
             <li>
-                <a href="register.html" title="case study">
-                    <span class="nav-label">Register</span>
+                <a href="index.html" title="Explore Case Studies">
+                    <span class="nav-label">Explore case studies</span>
                 </a>
             </li>
 
             <li>
-                <a href="index.html" title="about">
-                    <span class="nav-label">Case studies</span>
+                <a href="input_data.html" title="Create a new case study">
+                    <span class="nav-label">Create new case study</span>
                 </a>
             </li>
 
             <li>
-                <a href="dashboard.html" title="case study">
-                    <span class="nav-label">Dashboard</span>
+                <a href="dashboard.html" title="Run PoPS Model">
+                    <span class="nav-label">Run PoPS model</span>
                 </a>
             </li>
 
             <li>
-                <a href="report.html" title="case study">
-                    <span class="nav-label">Report</span>
+                <a href="report.html" title="View your history and create a report of your activity">
+                    <span class="nav-label">View history / create report</span>
                 </a>
             </li>
 
-            <li>
-                <a href="input_data.html" title="case study">
-                    <span class="nav-label">Inputs</span>
-                </a>
-            </li>
 
         </ul>
         <!-- END Tree  -->
@@ -330,7 +325,6 @@
             </div> -->
 
             <div class="row m-t-3">
-
             <!-- Start -->
                 <div class="col-sm-6">
 
@@ -348,7 +342,7 @@
                                     <div class="form-group">
                                         <label for="exampleInputName2" class="col-sm-3 control-label" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="Name of the host species">Host name</label>
                                          <div class="col-sm-7">
-                                           <input class="form-control" id="exampleInputEmail3" placeholder="" type="email">
+                                           <input class="form-control" id="exampleInputEmail3" placeholder="Tree-of-heaven, Ailanthus altissima" type="email">
                                          </div>
                                     </div>
 
@@ -431,7 +425,7 @@
                                             <div class="form-group">
                                                 <label for="exampleInputName2" class="col-sm-3 control-label" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="Name of the pest or pathogen">Species name</label>
                                                  <div class="col-sm-7">
-                                                   <input class="form-control" id="exampleInputEmail3" placeholder="" type="email">
+                                                   <input class="form-control" id="exampleInputEmail3" placeholder="Spotted Lanternfly (SLF), Lycorma delicatula" type="email">
                                                  </div>
                                             </div>
 
@@ -926,19 +920,16 @@
 
                                  <div class="form-group">
                                     <div class="m-x-3">
-                                        <p class="help-block">Information for the user here before they click "Run Model". Maybe a checkbox that the user clicks
-                                            to acknoledge that they know that the model is an estimation?
+                                        <p class="help-block">Clicking Submit New Case Study will save your data to the database and make your case study available on the Run PoPS Model page.
                                         </p>
                                     </div>  
                                 </div>
 
-                          
-                                 <div class="form-group">
+                                <div class="form-group">
                                     <div class="m-x-3">
-                                        <button type="button" class="btn btn-primary btn-block">Run Model</button>   
+                                        <a href="dashboard.html" class="btn btn-primary btn-block" role="button">Submit New Case Study</a>
                                     </div>  
                                 </div>
-
 
                               </form>
 
