--- a/dashboard.html
+++ b/dashboard.html
@@ -422,7 +422,7 @@
                           <div id='legend' class='legend'>
                             <br>
                               <div class='bar'></div>
-                              <div style = "color:white">Magnitude(m)</div>
+                              <div style = "color:white">Probability(%)</div>
                           </div>
                       </div>
                   </div>
@@ -507,6 +507,25 @@
                                     0.95, '#4B0D71',
                                     1.0, '#400079'
                                 ],
+                                'fill-outline-color': [
+                                'interpolate',
+                                    ['linear'],
+                                    ['get', 'layer.1'],
+                                    0, '#E5B600',
+                                    0.10, '#D9A908',
+                                    0.20, '#CD9C11',
+                                    0.30, '#B58222',
+                                    0.40, '#AA752B',
+                                    0.50, '#9E6834',
+                                    0.60, '#925B3C',
+                                    0.70, '#864E45',
+                                    0.75, '#7A414E',
+                                    0.80, '#6F3457',
+                                    0.85, '#63275F',
+                                    0.90, '#571A68',
+                                    0.95, '#4B0D71',
+                                    1.0, '#400079'
+                                ],
                                 'fill-opacity': [
                                     'interpolate',
                                     ['linear'],
@@ -558,6 +577,25 @@
                             "paint": {
                                 'fill-color': [
                                     'interpolate',
+                                    ['linear'],
+                                    ['get', 'layer.1'],
+                                    0, '#E5B600',
+                                    0.10, '#D9A908',
+                                    0.20, '#CD9C11',
+                                    0.30, '#B58222',
+                                    0.40, '#AA752B',
+                                    0.50, '#9E6834',
+                                    0.60, '#925B3C',
+                                    0.70, '#864E45',
+                                    0.75, '#7A414E',
+                                    0.80, '#6F3457',
+                                    0.85, '#63275F',
+                                    0.90, '#571A68',
+                                    0.95, '#4B0D71',
+                                    1.0, '#400079'
+                                ],
+                                'fill-outline-color': [
+                                'interpolate',
                                     ['linear'],
                                     ['get', 'layer.1'],
                                     0, '#E5B600',
