changed names of management scenarios

--- a/dashboard.html
+++ b/dashboard.html
@@ -439,8 +439,8 @@
 
                   var managements = [
                       'No Management',
-                      'Scenario 1',
-                      'Scenario 2'
+                      '$18 million',
+                      '$21 million'
                     ];
 
                   var managmented = [0];
