added the html file for drawing polygons on the map, ask Vasek for more information on the draw function and returning the polygon

--- a/input_data.html
+++ b/input_data.html
@@ -132,6 +132,10 @@
             transition: opacity .2s;
         }
 
+        .slider::-ms-fill-lower {
+            background:  #2d99dc;
+        }
+
         /* Mouse-over effects */
         .slider:hover {
             opacity: 1; /* Fully shown on mouse-over */
@@ -154,6 +158,8 @@
             border-radius: 50%;
             background:  #2d99dc; /* Green background */
             cursor: pointer; /* Cursor on hover */
+
+
         }
 
 
